--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -158,13 +158,13 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
                     aria-expanded="true" aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-cog"></i>
-                    <span>Components</span>
+                    <i class="fas fa-fw fa-dolly"></i>
+                    <span>Gestión de salidas</span>
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="buttons.html">Buttons</a>
+                        <h6 class="collapse-header">Opciones disponibles:</h6>
+                        <a class="collapse-item" href="{% url 'salidas:productos_para_salida' %}">Productos disponibles</a>
                         <a class="collapse-item" href="cards.html">Cards</a>
                     </div>
                 </div>
