feat(modal_registrar_salida): auto-llenar departamento al seleccionar solicitante y filtrar unidades por departamento
- Al seleccionar un solicitante, llenar el <select> de Departamento usando window.datosSolicitantes y refrescar solo la UI con `change.select2`.
- Al cambiar el Departamento, repoblar el <select> de Unidad con las unidades asociadas de window.todosUnidades y refrescar la UI con `change.select2`.

--- a/salidas/templates/salidas/modales/modal_registrar_salida.html
+++ b/salidas/templates/salidas/modales/modal_registrar_salida.html
@@ -19,6 +19,7 @@
     window.datosSolicitantes = {{ datos_solicitantes_json|safe }};
     window.datosUnidades = {{ datos_unidades_json|safe }};
     window.todosSolicitantes = {{ todos_solicitantes_json|safe }};
+    window.todosUnidades = {{ todos_unidades_json|safe }};
 </script>
 
 <!-- Script específico del modal -->
