--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -151,23 +151,14 @@
 
             <!-- Título ejemplo-->
             <div class="sidebar-heading">
-                Salida de almacén
+                Gestión de salidas
             </div>
 
-            <!-- Elemento de navegación - Contraer menú de páginas ejemplo para mas para selecionar -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
-                    aria-expanded="true" aria-controls="collapseTwo">
+                <a class="nav-link" href="{% url 'salidas:productos_para_salida' %}">
                     <i class="fas fa-fw fa-dolly"></i>
-                    <span>Gestión de salidas</span>
+                    <span>Salidas</span>
                 </a>
-                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Opciones disponibles:</h6>
-                        <a class="collapse-item" href="{% url 'salidas:productos_para_salida' %}">Productos disponibles</a>
-                        <a class="collapse-item" href="cards.html">Cards</a>
-                    </div>
-                </div>
             </li>
 
             <!-- Agregar mas Funciones -->
