feat(nav): actualizar íconos en menú de entradas y salidas
- Histórico Entradas: reemplazado por `fa-arrow-circle-down`
- Histórico Salidas: reemplazado por `fa-arrow-circle-up`

--- a/salidas/templates/salidas/lista_salidas.html
+++ b/salidas/templates/salidas/lista_salidas.html
@@ -136,7 +136,7 @@
           </td>
           <td>
             <div class="dropdown">
-              <button class="btn btn-sm btn-outline-secondary dropdown-toggle"
+              <button class="btn btn-sm btn-outline-primary dropdown-toggle"
                       type="button"
                       id="acciones{{ s.pk }}"
                       data-toggle="dropdown"
