--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -135,7 +135,7 @@
 
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'inventario:lista_entradas' %}">
-                    <i class="fas fa-fw fa-layer-group"></i>
+                    <i class="fas fa-fw fa-arrow-circle-down"></i>
                     <span>Histórico Entradas</span>
                 </a>
             </li>
@@ -162,10 +162,10 @@
             </li>
 
             <li class="nav-item">
-            <a class="nav-link" href="{% url 'salidas:lista_salidas' %}">
-                <i class="fas fa-fw fa-history"></i>
-                <span>Histórico Salidas</span>
-            </a>
+                <a class="nav-link" href="{% url 'salidas:lista_salidas' %}">
+                    <i class="fas fa-fw fa-arrow-circle-up"></i>
+                    <span>Histórico Salidas</span>
+                </a>
             </li>
 
             <!-- Agregar mas Funciones -->
