--- a/salidas/templates/salidas/lista_salidas.html
+++ b/salidas/templates/salidas/lista_salidas.html
@@ -188,7 +188,7 @@
                   <a class="dropdown-item text-info"
                     href="#"
                     data-action="imprimir"
-                    data-id="{{ s.pk }}">
+                    data-url="{% url 'salidas:imprimir_vale' s.pk %}">
                     <i class="fas fa-file-pdf"></i> PDF
                   </a>
                 </li>
