--- a/salidas/templates/salidas/vale_pdf.html
+++ b/salidas/templates/salidas/vale_pdf.html
@@ -1,64 +1,75 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Vale de Salida {{ vale.folio }}</title>
-    <link rel="stylesheet" href="{% static 'salidas/css/vale.css' %}">
-</head>
-<body>
-    {% if vale.estado == 'cancelado' %}
-    <div class="watermark">CANCELADO</div>
-    {% endif %}
-    <header class="vale-header">
-        <div class="logo-left">
-            <img src="{% static 'salidas/img/logo_gob.png' %}" alt="Gobierno de México" class="logo-img-gob">
-        </div>
-        <div class="logo-center">
-            <p class="header-line">Servicios de Salud del Instituto Mexicano de Seguro Social para el Bienestar</p>
-            <p class="header-line">Coordinación Estatal de Campeche</p>
-            <p class="header-line">Departamento de Tecnología de la Información</p>
-        </div>
-        <div class="logo-right">
-            <img src="{% static 'salidas/img/logo_imss.png' %}" alt="IMSS-Bienestar" class="logo-img-imss">
-        </div>
-    </header>
+    <head>
+        <meta charset="UTF-8">
+        <title>Vale de Salida {{ vale.folio }}</title>
+        <link rel="stylesheet" href="{% static 'salidas/css/vale.css' %}">
+    </head>
+    <body>
+        {% if vale.estado == 'cancelado' %}
+            <div class="watermark">CANCELADO</div>
+        {% endif %}
 
-    <h1 class="title">Vale de Salida de Almacén</h1>
-    <h1 class="title">Folio {{ vale.folio }}</h1>
+        <!-- HEADER REORGANIZADO COMO TABLA -->
+        <header class="vale-header">
+            <table class="header-table" width="100%" cellspacing="0" cellpadding="0">
+            <tr>
+                <td class="logo-cell logo-left">
+                <img src="{% static 'salidas/img/logo_gob.png' %}"
+                    alt="Logo Gobierno de México"
+                    class="logo-img-gob">
+                </td>
+                <td class="logo-cell logo-right">
+                <img src="{% static 'salidas/img/logo_imss.png' %}"
+                    alt="Logo IMSS-Bienestar"
+                    class="logo-img-imss">
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2" class="header-text">
+                <p class="header-line">
+                    Servicios de Salud del Instituto Mexicano de Seguro Social para el Bienestar
+                </p>
+                <p class="header-line">Coordinación Estatal de Campeche</p>
+                <p class="header-line">Departamento de Tecnología de la Información</p>
+                </td>
+            </tr>
+            </table>
+        </header>
 
-    <div class="fields">
-        <p><strong>Fecha de solicitud:</strong> {{ vale.fecha_creacion|date:"d/m/Y" }}</p>
-        <p><strong>Solicitante:</strong> {{ vale.solicitante.nombre }}</p>
-        <p><strong>Departamento:</strong> {{ vale.departamento.nombre }}</p>
-        <p><strong>Unidad para utilizarse:</strong> {{ vale.unidad.nombre }}</p>
-    </div>
+        <h1 class="title">Vale de Salida de Almacén</h1>
+        <h1 class="title">Folio {{ vale.folio }}</h1>
 
-    <table class="items-table">
-        <colgroup>
-            <!-- Cantidades: ancho fijo pequeño -->
+        <div class="fields">
+            <p><strong>Fecha de solicitud:</strong> {{ vale.fecha_creacion|date:"d/m/Y" }}</p>
+            <p><strong>Solicitante:</strong> {{ vale.solicitante.nombre }}</p>
+            <p><strong>Departamento:</strong> {{ vale.departamento.nombre }}</p>
+            <p><strong>Unidad para utilizarse:</strong> {{ vale.unidad.nombre }}</p>
+        </div>
+
+        <table class="items-table">
+            <colgroup>
             <col style="width:15mm;">
-            <!-- Descripción: ancho fijo grande -->
             <col style="width:120mm;">
-            <!-- Observaciones: ancho fijo mediano -->
             <col style="width:40mm;">
-        </colgroup>
-        <thead>
+            </colgroup>
+            <thead>
             <tr>
                 <th>Cant.</th>
                 <th>Descripción</th>
                 <th>Observaciones</th>
             </tr>
-        </thead>
-        <tbody>
+            </thead>
+            <tbody>
             {% for detalle in vale.detalles.all %}
             <tr>
                 <td class="cell-qty">{{ detalle.cantidad }}</td>
                 <td class="cell-desc">
-                    {{ detalle.producto.nombre }}, 
-                    {{ detalle.producto.marca }}, 
-                    {{ detalle.producto.color }}, 
-                    {{ detalle.producto.modelo }}
+                {{ detalle.producto.nombre }}, 
+                {{ detalle.producto.marca }}, 
+                {{ detalle.producto.color }}, 
+                {{ detalle.producto.modelo }}
                 </td>
                 <td class="cell-obs">{{ detalle.observaciones }}</td>
             </tr>
@@ -67,32 +78,32 @@
                 <td colspan="3">No hay ítems registrados</td>
             </tr>
             {% endfor %}
-        </tbody>
-    </table>
+            </tbody>
+        </table>
 
-    <table class="signatures">
-        <colgroup>
+        <table class="signatures">
+            <colgroup>
             <col style="width:33%;">
             <col style="width:33%;">
             <col style="width:33%;">
-        </colgroup>
-        <tr>
+            </colgroup>
+            <tr>
             <td class="sig-cell">
-                <strong>Entregó</strong>
                 <div class="signature-line"></div>
+                <strong>Entregó</strong><br>
                 <strong>Jefe de Oficina</strong>
             </td>
             <td class="sig-cell">
-                <strong>VoBo</strong>
                 <div class="signature-line"></div>
+                <strong>VoBo</strong><br>
                 <strong>Jefe de Departamento</strong>
             </td>
             <td class="sig-cell">
-                <strong>Recibió</strong>
                 <div class="signature-line"></div>
+                <strong>Recibió</strong><br>
                 <strong>Solicitante</strong>
             </td>
-        </tr>
-    </table>
-</body>
+            </tr>
+        </table>
+    </body>
 </html>
